# fer_psr

./: LICENSE  README.md
LAB_03/: add_x.py  orders.txt  process_orders.py
LAB_04/mouse_tracker/: README.md
LAB_04/mouse_tracker/launch/: track_mouse.xml
LAB_05/: readme
LAB_05/mouse_tracker/: CMakeLists.txt  package.xml  track_mouse1.launch
LAB_05/mouse_tracker/launch/: track_mouse.launch
LAB_05/mouse_tracker/scripts/: mouse_position_publisher.py  turtle_control.py
LAB_06/: exercise_06.rviz  laserscan_to_points.py  process_turtle_follow.py  processed_follow.bag  turrtlefollow_2021-12-07-12-26-15.bag
LAB_07/Task1/: CMakeLists.txt  viktor_horvat.cpp
LAB_07/Task2/: CMakeLists.txt
LAB_08/: CMakeLists.txt  turtle_lawnmower_node.cpp  viktor_horvat.launch
LAB_09/: move_base_rps.launch
Lab10_ver2501/: fer_building.pgm  fer_building.yaml  laserscan_to_points.py  trajectory_visualizer.py
